# python_voice_assistant

./: .env.example  .gitignore  CHANGELOG.md  LICENCE.md  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: en_doc.md  ru_doc.md
examples/: base.py  speaker_recognition.py
python_voice_assistant/: Helper.py  Listener.py  Speaker.py  __init__.py  settings.py
python_voice_assistant/languages/: en.json  ru.json
tests/: conftest.py  test_listener.py
