[tool.poetry]
name = "python-voice-assistant"
version = "0.0.1"
description = "Create your own voice assistant like jarvis"
authors = ["Zeph1rr <grianton535@gmail.com>"]
readme = "README.md"
packages = [{include = "python_voice_assistant"}]

[tool.poetry.dependencies]
python = "^3.10"
vosk = "^0.3.45"
loguru = "^0.7.0"
silero = "^0.4.1"
sounddevice = "^0.4.6"
numpy = "^1.24.3"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
